<resources>
    <string name="app_name">News Feed App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Tony Roshdy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_live_chat">Live Chat</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_wish">Wish List</string>
    <string name="menu_magazine">E-Magazine</string>
</resources>